# ucore_zmq

./: CMakeLists.txt
cmake/: build.cmake
src/app/test/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/px_zmq/: CMakeLists.txt
src/lib/px_zmq/include/: application.h  env.h  log.h  message.h  object.h  platform.h
src/lib/px_zmq/src/: appinst.cpp  appinst.h  application.cpp  env.cpp  logger.cpp  logger.h  msg_q.cpp  msg_q.h  object.cpp  plugin.cpp  plugin.h  router.cpp  router.h
src/lib/uzmq/: CMakeLists.txt
src/lib/uzmq/include/uzmq/: application.h  env.h  log.h  message.h  object.h  platform.h
src/lib/uzmq/src/: appinst.cpp  appinst.h  application.cpp  env.cpp  log.cpp  loggerinst.cpp  loggerinst.h  msgq.cpp  msgq.h  object.cpp  plugin.cpp  plugin.h  router.cpp  router.h
src/plugin/: CMakeLists.txt
src/plugin/testA/: CMakeLists.txt  export.cpp  testa.cpp  testa.h
src/plugin/testB/: CMakeLists.txt  export.cpp  testb.cpp  testb.h
src/plugin/testC/: CMakeLists.txt  export.cpp  testc.cpp  testc.h
src/protocol/: CMakeLists.txt
src/protocol/proto_uzmq/: CMakeLists.txt  proto_uzmq.hpp
src/protocol/proto_uzmq/proto/: uzmq_print.proto
